apps/production/productivity/open-webui/patch_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: open-webui-deployment
spec:
  template:
    spec:
      containers:
        - name: open-webui
