apps/production/productivity/open-webui/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: open-webui
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`chat-internal.local.${DOMAIN}`) || Host(`chat-internal.internal.${DOMAIN}`)
      kind: Rule
      services:
        - name: open-webui-service
          port: 8080
  tls:
    certResolver: letsencrypt
